# RC

./: .gitignore  README.md  _config.yml  _documents.md  _index.html  about.md  dev.md  docs.html  documentation.html  documents.md  download.md  downloads.html  index.html  index.md  manual.md  milestones.markdown  milestones.md  params.json
MS1/actor-graph/: actor-graph.cabal  dna.cabal  dot-product.hs  main.hs  test.hs
MS1/actor-graph/DNA/: AST.hs  Actor.hs  CH.hs
MS1/actor-graph/Data/: HListF.hs
MS1/actor-graph/Graph/: Actor.hs  Graph.hs
MS1/actor-graph/data/: template.cabal
MS1/distributed-dot-product/: Chan.hs  Types.hs  Worker.hs  distributed-dot-product.cabal  dot-product.hs  initiate_CHprocess.sh  managed.hs  scratch.hs  single-threaded.hs  startup_script.sh  submission.sh  test.sh
MS1/distributed-dot-product/DNA/: AST.hs  SingleThreaded.hs  Util.hs
MS1/distributed-dot-product/RC/: Actors.hs  Combinators.hs  Types.hs
MS1/dna/: DNA.hs  TODO  dna.cabal
MS1/dna-examples/: dna-examples.cabal
MS1/dna-runtime/: dna-runtime.cabal
MS1/dna-runtime/DNA/: CH.hs  Channel.hs
MS1/dna/DNA/: AST.hs  Actor.hs
MS2/: README.md  Setup.hs  ch-halide-dna.cabal  ddp-in-memory.hs
MS2/CloudGridder/: CloudGridder.cabal
MS2/CloudGridder/src/: GridMe.hs
MS2/OskarReader/: Makefile  amp2romein.c  o2a.h  readOSKAR.cpp  readOSKAR.h  uvw2romein.c
MS2/OskarReader/RW_Haskell/: Makefile  OskarFFI.hs  OskarFFIprim.cmm  writeOSKAR.hs  writeOSKARc.cpp
MS2/bench-programs/: bench-message.hs
MS2/distributed-dot-product/: DNA.hs  clean.sh  ddp-erlang-style.cabal  ddp-new-variant.hs  dna_cad.py  test2.sh
MS2/distributed-dot-product/DNA/: CmdOpts.hs  Common.hs  DNA.hs  Logging.hs  Run.hs  Types.hs
MS2/dna-programs/: DDP.hs  DDP_Slice.hs  DDP_Slice_Accelerate.hs  DDP_Slice_CUDA.hs  cuda-dotp.cu  ddp-in-memory-accelerate.hs  ddp-in-memory-collector.hs  ddp-in-memory-cuda.hs  ddp-in-memory-design.hs  ddp-in-memory-failure.hs  ddp-in-memory-hierarchical.hs  ddp-in-memory-large.hs  ddp-in-memory.hs  dna-gridding.hs  make.sh  map-reduce.hs
MS2/dna-programs/tests/: test-read.hs
MS2/halide-gridding/: CMakeLists.txt  Makefile  README  gridding.cpp  reduced-example-works-wrong-nesting.cpp  reduced-example.cpp
MS2/lib/: DNA.hs
MS2/lib/DNA/: CAD.hs  CmdOpts.hs  Controller.hs  DNA.hs  Gridding.hs  Lens.hs  Logging.hs  Monitor.hs  Run.hs  SimpleLocalNetWithoutDiscovery.hs  SlurmBackend.hs  Types.hs  spawn-all-example.hs
MS2/lib/DSL_Gridder/: 2slurm  Common.h  DGridding.hs  Defines.h  DistData.hs  GriddersFFI.hs  GriddersFFIprim.cmm  Makefile  Makefile.cluster  Makefile.desktop  Oskar.hs  bld.sh  ghcl  gridding-in-memory.hs  gridding.cpp  mkdeps.sh  rom.exp  rom_f.exp  romein_client.cc  run  se.sh  temp.ini  temp.sky  writeOSKARc.h
MS2/lib/OskarCfg/: OskarCfg.hs
MS2/lib/halide-gridding/: Gridding.hs  Makefile  README  gridding.cpp  halide_client.cpp  halide_support.cpp  reduced-example-not-working-cyclic-dep.cpp  test.cpp  test_conformance.cpp  test_performance.cpp
MS2/programs/: ddp-gen-data-file.hs
MS2/scripts/: create_floats.py  test-monitor.sh
MS2/visualize/: dna-summary.py  html_plotter.py  plotter.py  readevtlog.py  readlog.py
MS2/visualize/html_conf/: 25637-u.conf  983218-s-ddp.conf  983375-s-large.conf  983574-s-failure.conf  984772-s-hier.conf  984917-s-cuda.conf
MS3/: README.md  Setup.hs  boot.sh  dna-ms3.cabal
MS3/Sketches/: Setup.hs  Sketches.cabal
MS3/Sketches/CPU_Gridders/: CPUGridder.hs  ScatterGridderWDep.hs  avx_sum.cpp  common.h  fft.cpp  fft_dyn_padded.cpp  scatter_gridder.cpp  scatter_gridder.h  scatter_gridder_w_dependent.cpp  scatter_gridder_w_dependent_dyn.cpp  scatter_gridder_w_dependent_dyn_1p.cpp  scatter_psf_w_dependent_dyn.cpp
MS3/Sketches/C_Quote_Utils/: Utils.hs
MS3/Sketches/Clean/: degrid_gpu.cu  hogbom.cpp  hogbom.cu  posFind.cuh
MS3/Sketches/FFT/: FFT.hs  cufftshift.cu
MS3/cbits/: channel-file.c
MS3/cupti/: cupti.cabal
MS3/dna-programs/: DDP.hs  DDP_Slice.hs  GridderActors.hs  Gridder_DNA.hs  ddp-in-memory-collector.hs  ddp-in-memory-hierarchical.hs  ddp-in-memory.hs
MS3/lib/: DNA.hs
MS3/linux-perf-stat/: linux-perf-stat.cabal
MS3/visualize/: d3-timeline.js  html_plotter.py  readevtlog.py  showSquare2Dim.py
MS4/dna-programs/: Config.hs  DDP_Slice.hs  Data.hs  Kernel.hs  Oskar.hs  Scheduling.hs  Vector.hs  ddp-in-memory.hs  dna-ms4-programs.cabal  imaging.hs
MS5/: README.md  Setup.hs  boot.sh  ms5.cabal  stack.yaml
MS5/bench/: b.sh  cfg.h  cppcycle.cpp  generate_all_halide.cpp  scatter_halide.cpp  scatter_halide.h
MS5/dna/: dna.cabal
MS5/dna-compiler/: AST.hs  Step.hs
MS5/dna-flow/: Flow.hs  dna-flow.cabal
MS5/halide-hs/: exec.hs
MS5/halide_scatter/: cppcycle.cpp  halide_scatter.cpp  halide_scatter_1bl_1gcf.cpp  halide_scatter_1bl_1gcf_m.cpp  halide_scatter_1bl_1gcf_m_f.cpp  halide_scatter_1bl_1gcf_m_full.cpp  halide_scatter_full.cpp  halide_target_cfg.h  mkHalideBuf.h  scatter_gridder_w_dependent_dyn_1p_1gcf_halide.cpp  scatter_gridder_w_dependent_dyn_1p_1gcf_halide.h  scatter_gridder_w_dependent_dyn_1p_1gcf_halide_m.cpp  scatter_gridder_w_dependent_dyn_1p_1gcf_halide_m_f.cpp  scatter_gridder_w_dependent_dyn_1p_halide.cpp  scatter_gridder_w_dependent_dyn_1p_halide_full.cpp  scatter_gridder_w_dependent_dyn_1p_halide_full.h
MS5/kernels_factored/: fft_halide.cpp  init_halide.cpp  scatter_halide.cpp
MS5/lumber/: README
MS5/mockup/: mockup.hs  mockup2.hs  mockup3.hs  mockup4.hs  mockup5.hs  mockup6.hs  mockup7.hs  mockup8.hs  mockup9.hs
MS5/programs/: dotproduct-dna.hs  dotproduct.hs  facetting.hs  gridding.hs  imaging.hs
MS6/: Setup.hs  boot.sh  ms6.cabal  stack.yaml
MS6/LogAn/: AnCPUGridders.hs  AnGPUGridders.hs  Driver.hs  Dump.hs  README
MS6/bench/: b.sh  bin_gridder.cpp  cppcycle.cpp  mkHalideBuf.h
MS6/bench_atomic/: b.sh  cfg.h  cppcycle.cpp  generate_all_halide.cpp  scatter_halide.cpp
MS6/cfg/: continuum.yaml
MS6/programs/: binning.hs  continuum.hs  dotproduct.hs  facetting.hs  gridding.hs  imaging.hs
MS6/visualize/: csv_generator.py  html_plotter.py  readevtlog.py
(+577 files in other folders)
