name:                ch-dna
version:             0.1
synopsis:            DSL constructions for radio astronomy imaging with a focus on data movement and optimization
-- description:         
homepage:            https://github.com/SKA-ScienceDataProcessor/RC
license:             Apache-2.0
license-file:        LICENSE
author:              Peter Braam
maintainer:          peter.braam@peterbraam.com
-- copyright:           
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.20

--extra-source-files:  create-floats.c, create_floats.py,
--                     build.sh, clean.sh,
--                     ddp.py, dna_cad.py, dna_lib.py

Flag disableSIMD
  description:       Disables ddp-erland-style-SIMD and ch-dna-SIMD-eventlog executables for faster compilation.
  default:           False


----------------------------------------------------------------
library
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -threaded
  Hs-source-dirs:      lib
  build-depends:
    base         >=4.6,
    bytestring   >= 0.10, 
    binary,
    containers   >= 0.5,
    deepseq      >= 1.3,
    transformers >= 0.4.1,
    vector                  >= 0.10,
    vector-binary-instances >= 0.2.1,
    distributed-static,
    distributed-process          == 0.5.*,
    distributed-process-platform == 0.1.*,
    network               == 2.4.2.*,
    network-multicast     == 0.0.11.*,
    network-transport     == 0.4.0.*,
    network-transport-tcp == 0.4.0.*,
    optparse-applicative  == 0.10.*,
    data-accessor         == 0.2.2.*
  Exposed-modules:
    DNA
    DNA.DNA
    DNA.Types
    DNA.Run
    DNA.Monitor
    DNA.Logging
    DNA.Channel.File
    DNA.Common
    DNA.CmdOpts
    DNA.SimpleLocalNetWithoutDiscovery
    DNA.SimpleLocalnet.Internal.Multicast
  c-sources:
    lib/DNA/cbits/channel-file.c

----------------------------------------------------------------
executable ddp-in-memory
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -threaded
  Hs-source-dirs:      dna-programs
  main-is:             ddp-in-memory.hs
  build-depends:
    base >=4.6,
    ch-dna,
    vector >= 0.10

executable ddp-in-memory-collector
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -threaded
  Hs-source-dirs:      dna-programs
  main-is:             ddp-in-memory-collector.hs
  build-depends:
    base >=4.6,
    ch-dna,
    vector >= 0.10
