name:                ch-dna
version:             0.1
synopsis:            DSL constructions for radio astronomy imaging with a focus on data movement and optimization
-- description:         
homepage:            https://github.com/SKA-ScienceDataProcessor/RC
license:             Apache-2.0
license-file:        LICENSE
author:              Peter Braam
maintainer:          peter.braam@peterbraam.com
-- copyright:           
category:            Concurrency
build-type:          Custom
cabal-version:       >=1.16

--extra-source-files:  create-floats.c, create_floats.py,
--                     build.sh, clean.sh,
--                     ddp.py, dna_cad.py, dna_lib.py

Flag cuda
  description:       Enables CUDA support
  default:           False

----------------------------------------------------------------
library
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -threaded
  Hs-source-dirs:      lib
  build-depends:
    base         >=4.6,
    unix,
    time,
    old-locale,
    bytestring   >= 0.10, 
    binary,
    process      >= 1.2,
    directory,
    filepath,
    containers   >= 0.5,
    deepseq      >= 1.3,
    transformers >= 0.4.1,
    mtl          >= 2.1,
    vector                  >= 0.10,
    vector-binary-instances >= 0.2.1,
    distributed-static,
    distributed-process          == 0.5.*,
    distributed-process-platform == 0.1.*,
    network               >= 2.4,
    network-uri           >= 2.6,
    network-transport     >= 0.4,
    network-transport-tcp >= 0.4,
    optparse-applicative  >= 0.11,
    data-accessor         >= 0.2.2
  Exposed-modules:
    DNA
    DNA.DNA
    DNA.Types
    DNA.Run
    DNA.Controller
    DNA.Logging
    DNA.Channel.File
    DNA.CmdOpts
    DNA.SlurmBackend
  c-sources:
    lib/DNA/cbits/channel-file.c

----------------------------------------------------------------
executable ddp-in-memory
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -threaded -eventlog
  Hs-source-dirs:      dna-programs
  main-is:             ddp-in-memory.hs
  build-depends:
    base >=4.6,
    ch-dna,
    vector >= 0.10,
    bytestring,
    binary,
    data-binary-ieee754,
    directory
  other-modules:
    DDP
    DDP_Slice

executable ddp-in-memory-collector
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -threaded -eventlog
  Hs-source-dirs:      dna-programs
  main-is:             ddp-in-memory-collector.hs
  build-depends:
    base >=4.6,
    ch-dna,
    binary,
    bytestring,
    data-binary-ieee754,
    vector >= 0.10,
    directory
  other-modules:
    DDP
    DDP_Slice

executable ddp-in-memory-failure
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -threaded -eventlog
  Hs-source-dirs:      dna-programs
  main-is:             ddp-in-memory-failure.hs
  build-depends:
    base >=4.6,
    ch-dna,
    binary,
    bytestring,
    data-binary-ieee754,
    vector >= 0.10,
    directory
  other-modules:
    DDP
    DDP_Slice

executable ddp-in-memory-hierachical
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -threaded -eventlog
  Hs-source-dirs:      dna-programs
  main-is:             ddp-in-memory-hierarchical.hs
  build-depends:
    base >=4.6,
    ch-dna,
    binary,
    bytestring,
    data-binary-ieee754,
    vector >= 0.10,
    directory
  other-modules:
    DDP

executable ddp-in-memory-large
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -threaded -eventlog
  Hs-source-dirs:      dna-programs
  main-is:             ddp-in-memory-large.hs
  build-depends:
    base >=4.6,
    ch-dna,
    vector >= 0.10,
    bytestring,
    binary,
    data-binary-ieee754,
    directory
  other-modules:
    DDP
    DDP_Slice

executable ddp-in-memory-cuda
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -threaded -eventlog
  Hs-source-dirs:      dna-programs
  main-is:             ddp-in-memory-cuda.hs
  x-cuda-sources:      dna-programs/cuda-dotp.cu
  x-cuda-options:      -arch=sm_21 -Xcompiler -fPIC
  extra-libraries:     cuda, cudart
  if !flag(cuda) {
    buildable:         False
  }
  build-depends:
    base >=4.6,
    ch-dna,
    vector >= 0.10,
    bytestring,
    binary,
    data-binary-ieee754,
    directory
  other-modules:
    DDP
    DDP_Slice

executable ddp-in-memory-accelerate
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -threaded -eventlog
  Hs-source-dirs:      dna-programs
  main-is:             ddp-in-memory-accelerate.hs
  if !flag(cuda) {
    buildable:         False
  }
  build-depends:
    base >=4.6,
    ch-dna,
    vector >= 0.10,
    bytestring,
    binary,
    data-binary-ieee754,
    directory,
    accelerate, accelerate-cuda, accelerate-io

executable map-reduce
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -threaded -eventlog
  Hs-source-dirs:      dna-programs
  main-is:             map-reduce.hs
  build-depends:
    base >=4.6,
    ch-dna,
    binary,
    bytestring,
    containers
  other-modules:
    DDP
    DDP_Slice

-- executable dna-gridding
--   -- needs custom Setup.hs, I guess. Also needs stdc++ library.
--   default-language:    Haskell2010
--   ghc-options:         -O2 -Wall -threaded
--   hs-source-dirs:      dna-programs
--   main-is:             dna-gridding.hs

-- --  c-sources:           lib/halide-gridding/halide_support.cpp

--   build-depends:
--      base >= 4.6,
--      ch-dna

executable ddp-gen-data-file
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -threaded
  Hs-source-dirs:      programs
  main-is:             ddp-gen-data-file.hs
  build-depends:
    base >=4.6,
    bytestring,
    binary,
    data-binary-ieee754
