Name:           actor-graph
Version:        0.1
Synopsis:       Graph of actors
Description:
  Graph of actors

Cabal-Version:  >= 1.10
License:        Apache-2.0
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Category:       Data
Build-Type:     Simple


Library
  Ghc-options:          -Wall
  Default-language:	Haskell2010
  Build-Depends:
    base         >=3 && <5,
    transformers >= 0.4.1,
    containers,
    binary,
    vector,
    fgl,
    distributed-process                >= 0.5.0,
    distributed-process-simplelocalnet >= 0.2.0.9,
    distributed-process-platform       >= 0.1,
    haskell-src-exts,
    haskell-src-exts-qq
 Exposed-modules:
    DNA.AST
    DNA.Actor
    DNA.CH
    DNA.Compiler.Basic
    DNA.Compiler.Types
    DNA.Compiler.CH
    DNA.Compiler.Scheduler
