Name:           distributed-dot-product
Version:        0.1
Synopsis:       Distributed dot product
Description:
  Distributed dot product implemented using cloud haskell

Cabal-Version:  >= 1.10
License:        Apache-2.0
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Category:       Data
Build-Type:     Simple

Executable dot-product
  Ghc-options:          -Wall -threaded
  Default-language:	Haskell2010
  Build-Depends:
    base         >=3 && <5,
    bytestring,
    transformers >= 0.4.1,
    binary       >= 0.7.2,
    containers, 
    time,
    distributed-process                >= 0.5.0,
    distributed-process-simplelocalnet >= 0.2.0.9,
    distributed-static                 >= 0.2.1
  Main-is:
    dot-product.hs
  Other-modules:
    Chan
    Worker
    Types
    RC.Actors
    RC.Combinators
    RC.Types
